# Network-Traffic-Tracker

./: NetworkTrafficAnalyzer.spec  README.md  anomaly_detection.py  anomaly_detector.py  app.py  build.py  build_exe.py  data_processor.py  desktop_app.py  device_identification.py  device_tracker.py  network_capture.py  pyproject.toml  setup.py  utils.py  visualization.py  visualizer.py
icons/: app_icon.icns  generate_icons.py
